--- a/.github/workflows/build-localized-sphinx.yml
+++ b/.github/workflows/build-localized-sphinx.yml
@@ -26,7 +26,7 @@ jobs:
           pip install googletrans==4.0.0rc1
 
       - name: Build and Translate 🔧
-        run: run.sh
+        run: ./run.sh
       
       - name: Deploy to Pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4
