--- a/.github/workflows/build-localized-sphinx.yml
+++ b/.github/workflows/build-localized-sphinx.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Install Python dependencies ⬇️
         run: |
+          python -m pip install --upgrade pip
           pip install sphinx sphinx-intl
           pip install git+https://github.com/arkadianriver/translate-po.git@recursive-src-dest#egg=translate-po
 
