--- a/.github/workflows/build-localized-sphinx.yml
+++ b/.github/workflows/build-localized-sphinx.yml
@@ -22,9 +22,9 @@ jobs:
 
       - name: Install Python dependencies ⬇️
         run: |
-          python -m pip install --upgrade pip
+          pip install -U setuptools
           pip install sphinx sphinx-intl
-          pip install git+https://github.com/arkadianriver/translate-po.git@recursive-src-dest
+          pip install git+https://github.com/arkadianriver/translate-po.git@recursive-carryon
 
       - name: Build and Translate 🔧
         run: ./run.sh
